--- a/package.json
+++ b/package.json
@@ -13,10 +13,13 @@
     "@gsap/react": "^2.1.2",
     "@react-three/drei": "^10.0.6",
     "@react-three/fiber": "^9.1.2",
+    "@react-three/postprocessing": "^3.0.4",
     "@tailwindcss/vite": "^4.1.4",
     "gsap": "^3.12.7",
+    "postprocessing": "^6.37.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-responsive": "^10.0.1",
     "tailwindcss": "^4.1.4",
     "three": "^0.175.0"
   },
