--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "gsap": "^3.12.7",
     "postprocessing": "^6.37.3",
     "react": "^19.0.0",
+    "react-countup": "^6.5.3",
     "react-dom": "^19.0.0",
     "react-responsive": "^10.0.1",
     "tailwindcss": "^4.1.4",
